IE, Edge grid 문제 해결

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link href="//fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/content.css" />
+    <link rel="stylesheet" href="css/content.css?" />
     <link rel="stylesheet" href="css/button.css" />
 
     <title>NO MORE IE</title>
@@ -88,10 +88,10 @@
       <hr>
       <div class="grid-item">
         <div class="item">
-          <div>
+          <div class="grid-item-first">
             <img src="img/iconmonstr-edge-1-240.png" alt="엣지" />
           </div>
-          <div>
+          <div class="grid-item-second">
             <p class="sub-title">마이크로소프트 엣지</p>
             <span>
               인터넷 익스플로러를 개발한 마이크로소프트에서
@@ -104,10 +104,10 @@
           </div>
         </div>
         <div class="item">
-          <div>
+          <div class="grid-item-first">
             <img src="img/chrome.png" alt="크롬" />
           </div>
-          <div>
+          <div class="grid-item-second">
             <p class="sub-title">구글 크롬</p>
             <span>
               구글에서 개발하였으며
@@ -122,10 +122,10 @@
           </div>
         </div>
         <div class="item">
-          <div>
+          <div class="grid-item-first">
             <img src="img/whale.png" alt="웨일" />
           </div>
-          <div>
+          <div class="grid-item-second">
             <p class="sub-title">네이버 웨일</p>
             <span>
               간편한 화면 분할, 모바일 화면 접근에 용이한
@@ -140,10 +140,10 @@
           </div>
         </div>
         <div class="item">
-          <div>
+          <div class="grid-item-first">
             <img src="img/firefox.png" alt="파이어폭스" />
           </div>
-          <div>
+          <div class="grid-item-second">
             <p class="sub-title">모질라 파이어폭스</p>
             <span>
               낮은 사양의 컴퓨터,
@@ -157,10 +157,10 @@
           </div>
         </div>
         <div class="item">
-          <div>
+          <div class="grid-item-first">
             <img src="img/opera.png" alt="오페라" />
           </div>
-          <div>
+          <div class="grid-item-second">
             <p class="sub-title">오페라</p>
             <span>
               낮은 사양의 컴퓨터,
