--- a/index.html
+++ b/index.html
@@ -175,6 +175,13 @@
         </div>
       </div>
     </section>
+    <section class="container page">
+      <p class="sub-title">의견을 남겨주세요.</p>
+      <div class="container">
+        <div id="disqus_thread"></div>
+      </div>
+      <script async src="js/disqus.js"></script>
+    </section>
     <footer>
       <p>
         Copyright 2019 by <br />
