시각효과 개선 및 검색 엔진 최적화

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Internet Explorer는 구형 브라우저입니다!">
 
     <link href="//fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css" />
@@ -17,9 +18,9 @@
   <body>
     <div id="title-container">
       <div class="container">
-        <p id="title">
+        <h1 id="title">
           Internet Explorer는 구형 브라우저입니다!
-        </p>
+        </h1>
       </div>
     </div>
 
