--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
       <p class="center">
         이제 오래된 브라우저를 보내주고
         새로운 브라우저를 선택해보세요.
+        <br />모두 무료입니다!
       </p>
+     
       <hr>
       <div class="grid-item">
         <div class="item">
