Prettier codes with Prettier

--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Internet Explorer는 구형 브라우저입니다!">
+    <meta
+      name="description"
+      content="Internet Explorer는 구형 브라우저입니다!"
+    />
 
-    <link href="//fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
+    <link
+      href="//fonts.googleapis.com/css?family=Nanum+Gothic"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/content.css?" />
     <link rel="stylesheet" href="css/button.css" />
@@ -26,15 +32,13 @@
 
     <section id="ie-info" class="container page">
       <p>
-        당신은 <b>Internet Explorer
-        <span id="ie-version">??</span></b>으로
-        이 사이트에 접속하셨습니다.
+        당신은 <b>Internet Explorer <span id="ie-version">??</span></b
+        >으로 이 사이트에 접속하셨습니다.
         <span id="old-browser" class="hidden">
           이 프로그램은
-          <span id="browser-last-update-date">??</span>간
-          업데이트가 진행되지 않은 오래된 프로그램입니다.
-          최신 기술 미지원 및 보안 취약점을 지닐 수 있어
-          해커의 공격 대상이 될 수 있습니다!
+          <span id="browser-last-update-date">??</span>간 업데이트가 진행되지
+          않은 오래된 프로그램입니다. 최신 기술 미지원 및 보안 취약점을 지닐 수
+          있어 해커의 공격 대상이 될 수 있습니다!
         </span>
       </p>
     </section>
@@ -44,15 +48,17 @@
         <p class="container sub-title">
           Internet Explorer가 무엇인가요?
         </p>
-        <img class="icon" src="img/iconmonstr-internet-explorer-1-240.png" alt="인터넷 익스플로러" />
+        <img
+          class="icon"
+          src="img/iconmonstr-internet-explorer-1-240.png"
+          alt="인터넷 익스플로러"
+        />
         <p>
-          Internet Explorer(인터넷 익스플로러)는
-          마이크로소프트에서 개발한 <b>웹 브라우저</b>입니다.
-          웹 브라우저란 쉽게 말해 '인터넷에 접속하기 위한 도구'입니다.
-          대게 '인터넷 = 인터넷 익스플로러 (위의 저 아이콘)'
-          으로 잘못 알려지는 경우가 많은데,
-          인터넷 익스플로러 역시 인터넷에 접속하기 위한 도구에
-          불과합니다.
+          Internet Explorer(인터넷 익스플로러)는 마이크로소프트에서 개발한
+          <b>웹 브라우저</b>입니다. 웹 브라우저란 쉽게 말해 '인터넷에 접속하기
+          위한 도구'입니다. 대게 '인터넷 = 인터넷 익스플로러 (위의 저 아이콘)'
+          으로 잘못 알려지는 경우가 많은데, 인터넷 익스플로러 역시 인터넷에
+          접속하기 위한 도구에 불과합니다.
         </p>
 
         <p class="container sub-title">
@@ -61,16 +67,13 @@
         </p>
         <img class="icon" src="img/iconmonstr-edge-1-240.png" alt="엣지" />
         <p>
-          2015년 초, 윈도우 10의 공개 행사와 함께
-          인터넷 익스플로러를 대체할 차세대 브라우저를 공개하였습니다.
-          이에 따라 인터넷 익스플로러는
-          기능 업데이트가 진행되지 않게 되며
-          더 이상 새로운 기능을 제공하지 않습니다.
-          따라서
-          인터넷 익스플로러 11을 마지막으로
-          업데이트가 된 적이 없기 때문에
-          지금도 인터넷 익플로러를 사용한다는 것은
-          <span id="year-diff-ie11">4</span>년 전의 기술을 아직까지 사용하고 있는 셈입니다.
+          2015년 초, 윈도우 10의 공개 행사와 함께 인터넷 익스플로러를 대체할
+          차세대 브라우저를 공개하였습니다. 이에 따라 인터넷 익스플로러는 기능
+          업데이트가 진행되지 않게 되며 더 이상 새로운 기능을 제공하지 않습니다.
+          따라서 인터넷 익스플로러 11을 마지막으로 업데이트가 된 적이 없기
+          때문에 지금도 인터넷 익플로러를 사용한다는 것은
+          <span id="year-diff-ie11">4</span>년 전의 기술을 아직까지 사용하고
+          있는 셈입니다.
         </p>
 
         <p class="container sub-title">
@@ -78,30 +81,27 @@
         </p>
         <img class="icon" src="img/iconmonstr-product-10-240.png" alt="물품" />
         <p>
-          인터넷 익스플로러는 이름 뒤에 붙는 숫자로 버전을 구별합니다.
-          그나마 최신 버전인 11 조차 2015년에 만들어졌습니다.
-          게다가 11 미만의 버전인 8, 9, 10 버전은
-          보안 업데이트조차 중단되었습니다.
-          즉, 이를 노린 해커의 공격으로
-          개인 정보 등의 중요 정보를 빼앗기거나
-          시스템의 치명적인 손상을 입을 수 있다는 것입니다.
+          인터넷 익스플로러는 이름 뒤에 붙는 숫자로 버전을 구별합니다. 그나마
+          최신 버전인 11 조차 2015년에 만들어졌습니다. 게다가 11 미만의 버전인
+          8, 9, 10 버전은 보안 업데이트조차 중단되었습니다. 즉, 이를 노린 해커의
+          공격으로 개인 정보 등의 중요 정보를 빼앗기거나 시스템의 치명적인
+          손상을 입을 수 있다는 것입니다.
         </p>
         <p>
-          11 미만의 버전을 사용하신다면 <u><b>무조건</b></u>,
-          11 버전을 사용하더라도
-          아래의 최신 브라우저들로 교체할 것을 고려해보세요.
+          11 미만의 버전을 사용하신다면 <u><b>무조건</b></u
+          >, 11 버전을 사용하더라도 아래의 최신 브라우저들로 교체할 것을
+          고려해보세요.
         </p>
       </div>
     </section>
     <section class="container page">
       <p class="sub-title">대체 브라우저</p>
       <p class="center">
-        이제 오래된 브라우저를 보내주고
-        새로운 브라우저를 선택해보세요.
+        이제 오래된 브라우저를 보내주고 새로운 브라우저를 선택해보세요.
         <br />모두 무료입니다!
       </p>
-     
-      <hr>
+
+      <hr />
       <div class="grid-item">
         <div class="item">
           <div class="grid-item-first">
@@ -110,11 +110,9 @@
           <div class="grid-item-second">
             <p class="sub-title">마이크로소프트 엣지</p>
             <span>
-              인터넷 익스플로러를 개발한 마이크로소프트에서
-              새롭게 만든 차세대 브라우저로,
-              기존의 인터넷 익스플로러에 익숙했던
-              사용자에게 알맞는 브라우저입니다.
-              이 브라우저는 윈도우10에 기본 설치되어있습니다.
+              인터넷 익스플로러를 개발한 마이크로소프트에서 새롭게 만든 차세대
+              브라우저로, 기존의 인터넷 익스플로러에 익숙했던 사용자에게 알맞는
+              브라우저입니다. 이 브라우저는 윈도우10에 기본 설치되어있습니다.
               (Windows 전용으로, MacOS 또는 Linux 등에서는 사용할 수 없습니다.)
             </span>
           </div>
@@ -126,15 +124,17 @@
           <div class="grid-item-second">
             <p class="sub-title">구글 크롬</p>
             <span>
-              구글에서 개발하였으며
-              2018년을 기준으로 세계에서
-              점유율이 50%를 넘어
-              가장 많이 이용하는 웹 브라우저입니다.
-              자체 개발 자바스크립트 엔진 V8은
-              최상의 성능과 호환성을 보여줍니다.
+              구글에서 개발하였으며 2018년을 기준으로 세계에서 점유율이 50%를
+              넘어 가장 많이 이용하는 웹 브라우저입니다. 자체 개발 자바스크립트
+              엔진 V8은 최상의 성능과 호환성을 보여줍니다.
             </span>
-            <a href="https://www.google.com/intl/ko_ALL/chrome" class="button" target="_blank">
-              설치하기</a>
+            <a
+              href="https://www.google.com/intl/ko_ALL/chrome"
+              class="button"
+              target="_blank"
+            >
+              설치하기</a
+            >
           </div>
         </div>
         <div class="item">
@@ -144,15 +144,14 @@
           <div class="grid-item-second">
             <p class="sub-title">네이버 웨일</p>
             <span>
-              간편한 화면 분할, 모바일 화면 접근에 용이한
-              웹 브라우저입니다.
-              또한, ActiveX를 사용할 수 있게 해주는
-              '플러그인 호환모드'를 제공하여
-              인터넷 익스플로러를 벗어나기 힘들었던 이유 중
-              하나였던 ActiveX를 대체할 수 있습니다.
+              간편한 화면 분할, 모바일 화면 접근에 용이한 웹 브라우저입니다.
+              또한, ActiveX를 사용할 수 있게 해주는 '플러그인 호환모드'를
+              제공하여 인터넷 익스플로러를 벗어나기 힘들었던 이유 중 하나였던
+              ActiveX를 대체할 수 있습니다.
             </span>
             <a href="https://whale.naver.com/ko" class="button" target="_blank">
-              설치하기</a>
+              설치하기</a
+            >
           </div>
         </div>
         <div class="item">
@@ -162,14 +161,17 @@
           <div class="grid-item-second">
             <p class="sub-title">모질라 파이어폭스</p>
             <span>
-              낮은 사양의 컴퓨터,
-              많은 탭 등의 상황에서도 잘 작동하는
-              사용성 좋은 웹 브라우저입니다.
-              PDF 뷰어도 뛰어나 PDF 뷰어 대용으로
-              사용이 가능할 정도입니다.
+              낮은 사양의 컴퓨터, 많은 탭 등의 상황에서도 잘 작동하는 사용성
+              좋은 웹 브라우저입니다. PDF 뷰어도 뛰어나 PDF 뷰어 대용으로 사용이
+              가능할 정도입니다.
             </span>
-            <a href="https://www.mozilla.org/ko/firefox/new" class="button" target="_blank">
-              설치하기</a>
+            <a
+              href="https://www.mozilla.org/ko/firefox/new"
+              class="button"
+              target="_blank"
+            >
+              설치하기</a
+            >
           </div>
         </div>
         <div class="item">
@@ -179,14 +181,13 @@
           <div class="grid-item-second">
             <p class="sub-title">오페라</p>
             <span>
-              낮은 사양의 컴퓨터,
-              많은 탭 등의 상황에서도 잘 작동하는
-              사용성 좋은 웹 브라우저입니다.
-              OperaTurbo, OperaMail과 같이
-              편리한 여러 가지 기능을 제공합니다.
+              낮은 사양의 컴퓨터, 많은 탭 등의 상황에서도 잘 작동하는 사용성
+              좋은 웹 브라우저입니다. OperaTurbo, OperaMail과 같이 편리한 여러
+              가지 기능을 제공합니다.
             </span>
             <a href="https://www.opera.com/ko" class="button" target="_blank">
-              설치하기</a>
+              설치하기</a
+            >
           </div>
         </div>
       </div>
@@ -203,10 +204,12 @@
         'Seyng-hyun Hwang'.<br />
         All rights reserved.
       </p>
-      <img id="github-icon"
-           src="img/iconmonstr-github-1-240.png"
-           alt="깃허브"
-           onclick="window.open('https://github.com/tmdgus0084/no-more-ie', '_blank')" />
+      <img
+        id="github-icon"
+        src="img/iconmonstr-github-1-240.png"
+        alt="깃허브"
+        onclick="window.open('https://github.com/tmdgus0084/no-more-ie', '_blank')"
+      />
     </footer>
 
     <script async src="js/disqus.js"></script>
