--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
     <script src="js/query.js"></script>
     <script src="js/date.js"></script>
 
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+    ></script>
+
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+
     <title>NO MORE IE</title>
   </head>
   <body>
@@ -41,6 +50,17 @@
           있어 해커의 공격 대상이 될 수 있습니다!
         </span>
       </p>
+    </section>
+
+    <section class="container page">
+      <ins
+        class="adsbygoogle"
+        style="display: block; text-align: center;"
+        data-ad-layout="in-article"
+        data-ad-format="fluid"
+        data-ad-client="ca-pub-1073052695162842"
+        data-ad-slot="7294490021"
+      ></ins>
     </section>
 
     <section class="container page">
