--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </p>
     </section>
 
-    <section class="container page">
+    <!-- <section class="container page">
       <ins
         class="adsbygoogle"
         style="display: block; text-align: center;"
@@ -61,7 +61,7 @@
         data-ad-client="ca-pub-1073052695162842"
         data-ad-slot="7294490021"
       ></ins>
-    </section>
+    </section> -->
 
     <section class="container page">
       <div class="container">
@@ -75,24 +75,24 @@
         />
         <p>
           Internet Explorer(인터넷 익스플로러)는 마이크로소프트에서 개발한
-          <b>웹 브라우저</b>입니다. 웹 브라우저란 쉽게 말해 '인터넷에 접속하기
-          위한 도구'입니다. 대게 '인터넷 = 인터넷 익스플로러 (위의 저 아이콘)'
-          으로 잘못 알려지는 경우가 많은데, 인터넷 익스플로러 역시 인터넷에
-          접속하기 위한 도구에 불과합니다.
+          <b>웹 브라우저</b>입니다. 웹 브라우저란 쉽게 말해 '웹 사이트에
+          접속하기 위한 도구'입니다. 대게 '인터넷 = 인터넷 익스플로러 (위의 저
+          아이콘)' 으로 잘못 알려지는 경우가 많은데, 인터넷 익스플로러 역시
+          인터넷에 접속하기 위한 도구에 불과합니다.
         </p>
 
         <p class="container sub-title">
           잘 사용하고 있는데, <br />
           왜 구형인가요?
         </p>
-        <img class="icon" src="img/iconmonstr-edge-1-240.png" alt="엣지" />
+        <img class="icon" src="img/edge-icon.png" alt="엣지" />
         <p>
           2015년 초, 윈도우 10의 공개 행사와 함께 인터넷 익스플로러를 대체할
           차세대 브라우저를 공개하였습니다. 이에 따라 인터넷 익스플로러는 기능
           업데이트가 진행되지 않게 되며 더 이상 새로운 기능을 제공하지 않습니다.
-          따라서 인터넷 익스플로러 11을 마지막으로 업데이트가 된 적이 없기
-          때문에 지금도 인터넷 익플로러를 사용한다는 것은
-          <span id="year-diff-ie11">4</span>년 전의 기술을 아직까지 사용하고
+          따라서 인터넷 익스플로러는 11 버전을 마지막으로 업데이트가 된 적이
+          없기 때문에 지금도 인터넷 익플로러를 사용한다는 것은
+          <span id="year-diff-ie11">5</span>년 전의 기술을 아직까지 사용하고
           있는 셈입니다.
         </p>
 
@@ -102,10 +102,10 @@
         <img class="icon" src="img/iconmonstr-product-10-240.png" alt="물품" />
         <p>
           인터넷 익스플로러는 이름 뒤에 붙는 숫자로 버전을 구별합니다. 그나마
-          최신 버전인 11 조차 2015년에 만들어졌습니다. 게다가 11 미만의 버전인
-          8, 9, 10 버전은 보안 업데이트조차 중단되었습니다. 즉, 이를 노린 해커의
-          공격으로 개인 정보 등의 중요 정보를 빼앗기거나 시스템의 치명적인
-          손상을 입을 수 있다는 것입니다.
+          최신 버전인 11 조차 2015년에 배포되었습니다. 게다가 11 미만 버전인 8,
+          9, 10 버전은 보안 업데이트조차 중단되었습니다. 즉, 이런 오래된
+          브라우저는 사용하면 취약점을 노린 해커의 공격으로 개인 정보 등의 중요
+          정보를 빼앗기거나 시스템의 치명적인 손상을 입을 수 있습니다.
         </p>
         <p>
           11 미만의 버전을 사용하신다면 <u><b>무조건</b></u
@@ -118,14 +118,16 @@
       <p class="sub-title">대체 브라우저</p>
       <p class="center">
         이제 오래된 브라우저를 보내주고 새로운 브라우저를 선택해보세요.
-        <br />모두 무료입니다!
+      </p>
+      <p class="center">
+        모두 무료입니다!
       </p>
 
       <hr />
       <div class="grid-item">
         <div class="item">
           <div class="grid-item-first">
-            <img src="img/iconmonstr-edge-1-240.png" alt="엣지" />
+            <img src="img/edge-icon.png" alt="엣지" />
           </div>
           <div class="grid-item-second">
             <p class="sub-title">마이크로소프트 엣지</p>
@@ -134,6 +136,13 @@
               브라우저로, 기존의 인터넷 익스플로러에 익숙했던 사용자에게 알맞는
               브라우저입니다. 이 브라우저는 윈도우10에 기본 설치되어있습니다.
             </span>
+            <a
+              href="https://www.microsoft.com/ko-kr/edge"
+              class="button"
+              target="_blank"
+            >
+              설치하기</a
+            >
           </div>
         </div>
         <div class="item">
@@ -144,8 +153,8 @@
             <p class="sub-title">구글 크롬</p>
             <span>
               구글에서 개발하였으며 2018년을 기준으로 세계에서 점유율이 50%를
-              넘어 가장 많이 이용하는 웹 브라우저입니다. 자체 개발 자바스크립트
-              엔진 V8은 최상의 성능과 호환성을 보여줍니다.
+              넘어 사람들이 가장 많이 이용하는 웹 브라우저입니다. 자체 개발
+              자바스크립트 엔진 V8은 최상의 성능과 호환성을 보여줍니다.
             </span>
             <a
               href="https://www.google.com/intl/ko_ALL/chrome"
@@ -164,9 +173,8 @@
             <p class="sub-title">네이버 웨일</p>
             <span>
               간편한 화면 분할, 모바일 화면 접근에 용이한 웹 브라우저입니다.
-              또한, ActiveX를 사용할 수 있게 해주는 '플러그인 호환모드'를
-              제공하여 인터넷 익스플로러를 벗어나기 힘들었던 이유 중 하나였던
-              ActiveX를 대체할 수 있습니다.
+              다양한 편의 기능을 제공하고 있어 국내에서 많은 인기를 얻은
+              브라우저입니다.
             </span>
             <a href="https://whale.naver.com/ko" class="button" target="_blank">
               설치하기</a
@@ -180,9 +188,8 @@
           <div class="grid-item-second">
             <p class="sub-title">모질라 파이어폭스</p>
             <span>
-              낮은 사양의 컴퓨터, 많은 탭 등의 상황에서도 잘 작동하는 사용성
-              좋은 웹 브라우저입니다. PDF 뷰어도 뛰어나 PDF 뷰어 대용으로 사용이
-              가능할 정도입니다.
+              낮은 사양의 컴퓨터에서도, 많은 탭을 띄운 사용 패턴 등의 상황에서도
+              잘 작동하는 사용성 좋은 웹 브라우저입니다.
             </span>
             <a
               href="https://www.mozilla.org/ko/firefox/new"
@@ -200,9 +207,9 @@
           <div class="grid-item-second">
             <p class="sub-title">오페라</p>
             <span>
-              낮은 사양의 컴퓨터, 많은 탭 등의 상황에서도 잘 작동하는 사용성
-              좋은 웹 브라우저입니다. OperaTurbo, OperaMail과 같이 편리한 여러
-              가지 기능을 제공합니다.
+              낮은 사양의 컴퓨터에서도, 많은 탭을 띄운 사용 패턴 등의 상황에서도
+              잘 작동하는 사용성 좋은 웹 브라우저입니다. OperaTurbo, OperaMail과
+              같이 편리한 여러 가지 기능을 제공합니다.
             </span>
             <a href="https://www.opera.com/ko" class="button" target="_blank">
               설치하기</a
